--- a/OpenBBoxManager/mainwindow.ui
+++ b/OpenBBoxManager/mainwindow.ui
@@ -262,6 +262,25 @@
          </layout>
         </item>
         <item>
+         <widget class="QPushButton" name="subinfobutton">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>500</width>
+            <height>500</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Subject Info.</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -286,7 +305,7 @@
      <x>0</x>
      <y>0</y>
      <width>790</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
