--- a/OpenBBoxManager/mainwindow.ui
+++ b/OpenBBoxManager/mainwindow.ui
@@ -210,6 +210,25 @@
            </property>
           </widget>
          </item>
+         <item alignment="Qt::AlignRight">
+          <widget class="QPushButton" name="testButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Test</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+          </widget>
+         </item>
          <item>
           <widget class="QLabel" name="label_5">
            <property name="text">
